Minor updates via findbug.