@@ -1,5 +1,5 @@
 /**
- * 
+ *
  */
 package com.williamvanderhoef.foursquare.test.endpoints;
 
@@ -41,59 +41,59 @@ public class ListsTest extends BaseTest<UserListsResponse> {
 //		return "src/test/v2.users.self.lists.20110828.json";
 		return "src/test/v2.users.self.lists.20110901.json";
 	}
-	
+
 	public static DefinedType getEndpoint()
 	{
 		return new Results<UserListsResponse>(){};
 	}
-	
+
 	@Parameters
 	public static Collection<Object[]> generateParams(){
-		List<ResultsParser<UserListsResponse>> params = new ArrayList<ResultsParser<UserListsResponse>>();  
-        
+		List<ResultsParser<UserListsResponse>> params = new ArrayList<ResultsParser<UserListsResponse>>();
+
 		GsonResultsParser<UserListsResponse> gLoader = new GsonResultsParser<UserListsResponse>(getEndpoint());
 		params.add(gLoader);
 		JacksonResultsParser<UserListsResponse> jLoader = new JacksonResultsParser<UserListsResponse>(getEndpoint());
 		jLoader.setStrictValidation(true);
 		params.add(jLoader);
-        
+
 		return Arrays.asList(new Object[][] {
 				{gLoader},
 				{jLoader}
 		});
 	}
-	
+
 	public ListsTest(ResultsParser<UserListsResponse> loader)
 	{
 		this.loader = loader;
 	}
-	
+
 	private ResultsParser<UserListsResponse> loader = null;
-	
+
 	/**
 	 * @throws java.lang.Exception
 	 */
 	@Before
 	@Override
 	public void setUp() throws Exception {
-		
+
 		super.setUp();
-		
+
 		this.setResults(loader.parse(this.getFileContents()));
 	}
-	
-		
+
+
 	@Test
 	public void testGroups() {
-		
+
 		Results<UserListsResponse> results = getResults();
-		
+
 		Groups<FoursquareList> groups = results.getResponse().getLists();
-		
+
 		Assert.assertNotNull(groups);
-		
+
 		Assert.assertNotNull(groups.getGroups());
-	
+
 		Assert.assertTrue(groups.getGroups().size() >= 4);
 	}
 
@@ -101,19 +101,19 @@ public class ListsTest extends BaseTest<UserListsResponse> {
 	public void testValues() {
 
 		List<Group<FoursquareList>> lists = getResults().getResponse().getLists().getGroups();
-		
+
 		Group<FoursquareList> list = lists.get(0);
-		
+
 		Assert.assertEquals("todos", list.getType());
 		Assert.assertEquals("My To-Do List", list.getName());
-		Assert.assertEquals(new Integer(1), list.getCount());
-		
+		Assert.assertEquals(Integer.valueOf(1), list.getCount());
+
 		Assert.assertNotNull(list.getItems());
-		
+
 		List<FoursquareList> myTodoList =list.getItems();
-		
+
 		Assert.assertEquals(1, myTodoList.size());
-		
-		
+
+
 	}
 }
